kubernetes/apps/foundry-bluegreen-fixture/service-blue.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry-fixture-blue
  namespace: foundry-bluegreen-fixture
  labels:
    app: foundry-bluegreen-fixture
    foundryvtt.petebeegle.com/color: blue
spec:
  selector:
    app: foundry-bluegreen-fixture
    foundryvtt.petebeegle.com/color: blue
  ports:
    - name: http
      port: 80
      targetPort: http
